--- a/environment.yml
+++ b/environment.yml
@@ -18,7 +18,7 @@ dependencies:
   - ca-certificates=2020.1.1=0
   - cachetools=3.1.1=py_0
   - cairo=1.14.12=h8948797_3
-  - certifi=2019.11.28=py37_0
+  - certifi=2020.4.5.1=py37_0
   - cffi=1.14.0=py37h2e261b9_0
   - chardet=3.0.4=py37_1003
   - click=7.0=py37_0
@@ -86,7 +86,7 @@ dependencies:
   - libsodium=1.0.16=h1bed415_0
   - libssh2=1.9.0=h1ba5d50_1
   - libstdcxx-ng=9.1.0=hdf63c60_0
-  - libtiff=4.0.9=he6b73bb_1
+  - libtiff=4.1.0=h2733197_0
   - libuuid=1.0.3=h1bed415_2
   - libxcb=1.13=h1bed415_1
   - libxml2=2.9.9=hea5a465_1
@@ -107,9 +107,10 @@ dependencies:
   - numpy=1.18.1=py37h4f9e942_0
   - numpy-base=1.18.1=py37hde5b4d6_1
   - oauthlib=3.1.0=py_0
+  - olefile=0.46=py37_0
   - opencv=3.4.2=py37h6fd60c2_1
   - openh264=1.8.0=hdbcaa40_1000
-  - openssl=1.1.1d=h7b6447c_4
+  - openssl=1.1.1f=h7b6447c_0
   - opt_einsum=3.1.0=py_0
   - pandas=1.0.1=py37h0573a6f_0
   - pandoc=2.2.3.2=0
@@ -119,6 +120,7 @@ dependencies:
   - perl=5.26.2=h14c3975_0
   - pexpect=4.8.0=py37_0
   - pickleshare=0.7.5=py37_0
+  - pillow=7.0.0=py37hb39fc2d_0
   - pip=20.0.2=py37_1
   - pixman=0.38.0=h516909a_1003
   - prometheus_client=0.7.1=py_0
@@ -184,5 +186,6 @@ dependencies:
   - zeromq=4.3.1=he6710b0_3
   - zipp=2.2.0=py_0
   - zlib=1.2.11=h7b6447c_3
+  - zstd=1.3.7=h0b5b093_0
 prefix: /home/henriklg/anaconda3/envs/covid19
 
